--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,172 @@
-numpy>=1.25.0
-pandas==1.5.3
-streamlit==1.25.0
-matplotlib==3.8.2
-seaborn==0.12.2
-setuptools
-wheel
+altair==5.5.0
+annotated-types==0.7.0
+attrs==24.2.0
+autoscraper==1.1.14
+babel==2.16.0
+beautifulsoup4==4.12.3
+blinker==1.9.0
+blis==1.0.1
+bokeh==3.6.1
+bs4==0.0.2
+cachetools==5.5.0
+catalogue==2.0.10
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+cloudpickle==3.1.0
+colorama==0.4.6
+community==1.0.0b1
+confection==0.1.5
+contourpy==1.3.1
+courlan==1.3.2
+craigslistscraper==1.1.2
+cycler==0.12.1
+cymem==2.0.10
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2024.11.2
+dask-expr==1.1.19
+dask-glm==0.3.2
+dask-ml==2024.4.4
+dateparser==1.2.0
+distributed==2024.11.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+et_xmlfile==2.0.0
+fake-useragent==1.5.1
+Faker==33.1.0
+Flask==3.0.3
+fonttools==4.55.2
+fsspec==2024.10.0
+fuzzywuzzy==0.18.0
+gitdb==4.0.11
+GitPython==3.1.43
+GoogleNews==1.6.15
+greenlet==3.1.1
+h11==0.14.0
+htmldate==1.9.2
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jusText==3.0.1
+kiwisolver==1.4.7
+langcodes==3.5.0
+language_data==1.3.0
+Levenshtein==0.26.1
+llvmlite==0.43.0
+locket==1.0.0
+logging==0.4.9.6
+lxml==5.3.0
+lxml_html_clean==0.4.1
+lz4==4.3.3
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+markdownify==0.13.1
+MarkupSafe==3.0.2
+matplotlib==3.9.3
+mdurl==0.1.2
+MouseInfo==0.1.3
+msgpack==1.1.0
+multipledispatch==1.0.0
+murmurhash==1.0.11
+narwhals==1.14.2
+nest-asyncio==1.6.0
+networkx==3.4.2
+numba==0.60.0
+numpy==1.26.3
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+partd==1.4.2
+pillow==11.0.0
+playwright==1.49.0
+plotly==5.24.1
+preshed==3.0.9
+protobuf==5.29.0
+psutil==6.1.0
+pyarrow==18.1.0
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydantic==2.10.2
+pydantic_core==2.27.1
+pydeck==0.9.1
+pyee==12.0.0
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+pyparsing==3.2.0
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-jobspy==1.1.75
+python-Levenshtein==0.26.1
+python-louvain==0.16
+pytweening==1.2.0
+pytz==2024.2
+PyYAML==6.0.2
+RapidFuzz==3.10.1
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rich==13.9.4
+rpds-py==0.21.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+selenium==4.27.1
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sparse==0.15.4
+srsly==2.4.8
+streamlit==1.40.2
+tblib==3.0.0
+tenacity==9.0.0
+thinc==8.3.2
+threadpoolctl==3.5.0
+tld==0.13
+tls-client==1.0.1
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.2
+tqdm==4.67.1
+trafilatura==1.12.2
+trio==0.27.0
+trio-websocket==0.11.1
+typer==0.13.1
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+undetected-chromedriver==3.5.5
+urllib3==2.2.3
+wasabi==1.1.3
+watchdog==6.0.0
+weasel==0.4.1
+websocket-client==1.8.0
+websockets==14.1
+Werkzeug==3.0.6
+wordcloud==1.9.4
+wrapt==1.17.0
+wsproto==1.2.0
+xyzservices==2024.9.0
+zict==3.0.0
+zipp==3.21.0
