--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ narwhals==1.14.2
 nest-asyncio==1.6.0
 networkx==3.4.2
 numba==0.60.0
-numpy==1.26.3
+numpy>=1.25.0
 openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==24.2
