--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,201 @@
-altair==5.5.0
+absl-py==2.1.0
+aif360==0.6.1
+alembic==1.13.3
+altair==5.4.1
 annotated-types==0.7.0
-attrs==24.2.0
-autoscraper==1.1.14
+anyio==4.6.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.2.0
+autoclean==1.0.2
 babel==2.16.0
 beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.9.0
-blis==1.0.1
-bokeh==3.6.1
-bs4==0.0.2
+boto3==1.35.31
+botocore==1.35.31
 cachetools==5.5.0
-catalogue==2.0.10
 certifi==2024.8.30
 cffi==1.17.1
-charset-normalizer==3.4.0
+charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.20.0
-cloudpickle==3.1.0
+cloudpickle==2.2.1
 colorama==0.4.6
-community==1.0.0b1
-confection==0.1.5
-contourpy==1.3.1
-courlan==1.3.2
-craigslistscraper==1.1.2
+colorlog==6.8.2
+comm==0.2.2
+contourpy==1.3.0
 cycler==0.12.1
-cymem==2.0.10
-dash==2.18.2
-dash-bootstrap-components==1.6.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dask==2024.11.2
-dask-expr==1.1.19
-dask-glm==0.3.2
-dask-ml==2024.4.4
-dateparser==1.2.0
-distributed==2024.11.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-et_xmlfile==2.0.0
-fake-useragent==1.5.1
-Faker==33.1.0
-Flask==3.0.3
-fonttools==4.55.2
+debugpy==1.8.6
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.9
+docker==7.1.0
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.1
+flatbuffers==24.3.25
+fonttools==4.54.1
+fqdn==1.5.1
 fsspec==2024.10.0
-fuzzywuzzy==0.18.0
+gast==0.6.0
 gitdb==4.0.11
 GitPython==3.1.43
-GoogleNews==1.6.15
+google-pasta==0.2.0
 greenlet==3.1.1
+grpcio==1.67.1
 h11==0.14.0
-htmldate==1.9.2
+h2o==3.46.0.5
+h5py==3.12.1
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.10
-importlib_metadata==8.5.0
-itsdangerous==2.2.0
+imageio==2.36.0
+importlib-metadata==6.11.0
+ipykernel==6.29.5
+ipython==8.27.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.1
 Jinja2==3.1.4
+jmespath==1.0.1
 joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jusText==3.0.1
+jsonschema-specifications==2023.12.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keras==3.6.0
 kiwisolver==1.4.7
-langcodes==3.5.0
-language_data==1.3.0
-Levenshtein==0.26.1
+lazy_loader==0.4
+libclang==18.1.1
+lime==0.2.0.1
 llvmlite==0.43.0
-locket==1.0.0
-logging==0.4.9.6
-lxml==5.3.0
-lxml_html_clean==0.4.1
-lz4==4.3.3
-marisa-trie==1.2.1
+Mako==1.3.5
+Markdown==3.7
 markdown-it-py==3.0.0
-markdownify==0.13.1
-MarkupSafe==3.0.2
-matplotlib==3.9.3
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-MouseInfo==0.1.3
-msgpack==1.1.0
-multipledispatch==1.0.0
-murmurhash==1.0.11
-narwhals==1.14.2
+mistune==3.0.2
+ml-dtypes==0.4.1
+mock==4.0.3
+more-itertools==10.5.0
+mpmath==1.3.0
+multiprocess==0.70.17
+namex==0.0.8
+narwhals==1.13.5
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
+notebook==7.2.2
+notebook_shim==0.2.4
 numba==0.60.0
-numpy>=1.25.0
-openpyxl==3.1.5
-outcome==1.3.0.post0
-packaging==24.2
+numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.13.1
+optuna==4.0.0
+overrides==7.7.0
+packaging==24.1
 pandas==2.2.3
-partd==1.4.2
-pillow==11.0.0
-playwright==1.49.0
+pandocfilters==1.5.1
+parso==0.8.4
+pathos==0.3.3
+pillow==10.4.0
+platformdirs==4.3.6
 plotly==5.24.1
-preshed==3.0.9
-protobuf==5.29.0
-psutil==6.1.0
-pyarrow==18.1.0
-PyAutoGUI==0.9.54
+pox==0.3.5
+ppft==1.7.6.9
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+protobuf==4.25.5
+psutil==6.0.0
+pure_eval==0.2.3
+pyarrow==18.0.0
 pycparser==2.22
-pydantic==2.10.2
-pydantic_core==2.27.1
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydeck==0.9.1
-pyee==12.0.0
-PyGetWindow==0.0.9
 Pygments==2.18.0
-PyMsgBox==1.0.9
-pyparsing==3.2.0
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
+pyparsing==3.1.4
+pypey==3.0.2
 python-dateutil==2.9.0.post0
-python-jobspy==1.1.75
-python-Levenshtein==0.26.1
-python-louvain==0.16
-pytweening==1.2.0
+python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
-RapidFuzz==3.10.1
+pyzmq==26.2.0
 referencing==0.35.1
-regex==2024.11.6
 requests==2.32.3
-retrying==1.3.4
-rich==13.9.4
-rpds-py==0.21.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.1
+rpds-py==0.20.0
+s3transfer==0.10.2
+sagemaker==2.232.1
+sagemaker-core==1.0.9
+schema==0.7.7
+scikit-image==0.24.0
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
-selenium==4.27.1
-shellingham==1.5.4
+Send2Trash==1.8.3
+setuptools==75.1.0
+shap==0.46.0
 six==1.16.0
-smart-open==7.0.5
+slicer==0.0.8
+smdebug-rulesconfig==1.0.1
 smmap==5.0.1
 sniffio==1.3.1
-sortedcontainers==2.4.0
 soupsieve==2.6
-spacy==3.8.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-sparse==0.15.4
-srsly==2.4.8
-streamlit==1.40.2
+SQLAlchemy==2.0.35
+stack-data==0.6.3
+streamlit==1.40.1
+streamlit-lottie==0.0.5
+sympy==1.13.1
+tabulate==0.9.0
 tblib==3.0.0
 tenacity==9.0.0
-thinc==8.3.2
+termcolor==2.5.0
+terminado==0.18.1
+tf-keras-vis==0.8.7
 threadpoolctl==3.5.0
-tld==0.13
-tls-client==1.0.1
+tifffile==2024.9.20
+tinycss2==1.3.0
 toml==0.10.2
-toolz==1.0.0
-tornado==6.4.2
-tqdm==4.67.1
-trafilatura==1.12.2
-trio==0.27.0
-trio-websocket==0.11.1
-typer==0.13.1
+torch==2.5.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.2
-tzlocal==5.2
-undetected-chromedriver==3.5.5
+uri-template==1.3.0
 urllib3==2.2.3
-wasabi==1.1.3
 watchdog==6.0.0
-weasel==0.4.1
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
 websocket-client==1.8.0
-websockets==14.1
-Werkzeug==3.0.6
-wordcloud==1.9.4
-wrapt==1.17.0
-wsproto==1.2.0
-xyzservices==2024.9.0
-zict==3.0.0
-zipp==3.21.0
-setuptools>=58.0.0
+Werkzeug==3.1.3
+wheel==0.45.0
+widgetsnbextension==4.0.13
+wrapt==1.16.0
+zipp==3.20.2
